@@ -4,6 +4,17 @@ Current goal:
     * use COPY operation where it makes sense, e.g.,
         terminal cases in cross-forest unions
 
+    * add forest utility:
+        node_handle removeIdentityEdge(int fromlevel, unsigned from, node_handle p)
+
+        returns p most of the time, and quickly.
+        If the forest is identity-reduced, AND fromlevel is unprimed,
+        AND node p is at the level below fromlevel, AND node p is a
+        singleton node, AND from is the index of the singleton node,
+        THEN we return p's downward pointer.
+
+    * use removeIdentityEdge when building relation nodes in new operations
+
 Interface changes (aside from moving header files around)
 ======================================================================
 
